--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "base-64": "^1.0.0",
     "fathom-client": "^3.5.0",
     "next": "12.2.2",
+    "next-secure-headers": "^2.2.0",
     "next-share": "^0.12.1",
     "next-sitemap": "^3.1.11",
     "postmark": "^3.0.12",
